# Rust_Bot

./: Cargo.toml  LICENSE  README.md
src/: bot.rs  commands.rs  main.rs
src/commands/: count.rs  fuck.rs  ping.rs  quit.rs  rip.rs
