[package]
name = "rust_bot"
version = "0.1.0"
authors = ["Jacob Ellis Duncan <jellisduncan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serenity = "0.9.0-rc.4"
tokio = "0.2"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
rand = "0.7.3"
